# details.
#
# You should have received a copy of the GNU General Public License along with
# this program; if not, write to the Free Software Foundation, Inc., 51
# Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
#
# Copyright 2013-2014 (c) SkySQL Corporation Ab
#
# Author: Massimo Siani
# Date: August 2013
#




CHANGELOG

* Wed Mar 26 2014 Massimo Siani <massimo.siani@skysql.com>
- Register the release number in the API, register the Java Library

* Wed Mar 12 2014 Massimo Siani	<massimo.siani@skysql.com>
- Change MariaDB Enterprise to MariaDB Manager

* Thu Feb 27 2014 Massimo Siani <massimo.siani@skysql.com>
- Merge develop and release-1.0.1

* Fri Feb 21 2014 Massimo Siani	<massimo.siani@skysql.com>
- Fix Copyright and files headers

* Thu Feb 20 2014 Massimo Siani	<massimo.siani@skysql.com>
- Bump to version 1.7-121

* Tue Feb 18 2014 Massimo Siani	<massimo.siani@skysql.com>
- Fix pom.xml
- Merge Timofey's changes

* Thu Feb 13 2014 Massimo Siani	<massimo.siani@skysql.com>
- Deleted duplicate pom.xml

* Wed Feb 12 2014 Massimo Siani <massimo.siani@skysql.com>
- Fix API call for bulk data

* Fri Dec 13 2013 Massimo Siani <massimo.siani@skysql.com>
- Do not start the Monitor after installation

* Wed Dec 11 2013 Massimo Siani <massimo.siani@skysql.com>
- Add key generation upon install

* Fri Nov 29 2013 Massimo Siani <massimo.siani@skysql.com>
- Fix headers date

* Thu Nov 28 2013 Massimo Siani <massimo.siani@skysql.com>
- Change API call monitorclass/galera/key to monitorclass/galera

* Thu Nov 21 2013 Massimo Siani <massimo.siani@skysql.com>
- Fix headers
- Fix bug on Monitor version

* Tue Nov 19 2013 Massimo Siani <massimo.siani@skysql.com>
- Register Monitor version every 30 seconds
- Added machine-down state for Ping monitor
- Fixed locale on non-English machines

* Fri Nov 15 2013 Massimo Siani <massimo.siani@skysql.com>
- Added version registration in the API
- Include a modified mariadb java driver to avoid select commands on connect
